cocktail.ui: alignment fix for forms with hidden labels

--- a/cocktail/ui/resources/styles/cocktail-ui-form.scss
+++ b/cocktail/ui/resources/styles/cocktail-ui-form.scss
@@ -23,8 +23,10 @@
                 }
             }
 
-            .label + .controlContainer {
-                margin-left: 1em;
+            &[formLabelDisposition='normal'] {
+                .label + .controlContainer {
+                    margin-left: 1em;
+                }
             }
         }
     }
